docs(templates): bring the Java template README to parity (platform×transport)
The Java component template shipped only a one-line stub README, while the
python/rust/typescript templates each carry a full README documenting the
platform×transport CLI contract (run commands, --platform/--transport, the
platform-dependent -c default) and are token-substituted at generation. Java was
the odd one out — it didn't *reflect* the rearch contract the generated component
authors see.

Write a full templates/java/README.md modeled on the others (HOST/MQTT + GREENGRASS
run commands via the shaded JAR, Maven+GDK build/publish, the CLI-contract section
with the GREENGRASS→GG_CONFIG / HOST→FILE / KUBERNETES→CONFIGMAP default, layout
table) and register README.md for COMPONENTNAME/COMPONENTFULLNAME/JARNAME
substitution in ggcommons-template.json so the placeholders resolve like the
other languages.

Validated: manifest JSON valid; CLI suite 29 passed incl. test_generate_component
(parametrized over JAVA); every <<TOKEN>> used in the README is registered (no
literal token leaks into generated components).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M9YQ7qy7oTpToRjbhHFK5o